--- a/03.01-206-colors-starter/css/main.css
+++ b/03.01-206-colors-starter/css/main.css
@@ -25,7 +25,7 @@ header {
 }
 
 
-/*---------- CONTENT AREA ----------*/
+/*---------- CONTENT AREA, default ----------*/
 
 .col-3 {
   width: 100%;
@@ -55,10 +55,11 @@ footer {
 }
 
 
-/*---------- TABLET ----------*/
+/*---------- TABLET, pink ----------*/
 /* Change the background colors below */
 
 @media (min-width: 768px) {
+
   header {
     background-color: 	#DB7093;
   }
@@ -73,17 +74,23 @@ footer {
 
   #column-3 {
     background-color: #FF69B4;
+    width: 100%
   }
 
   footer {
     background-color: #FF1493;
   }
 
+  .col-3 {
+    width: 50%;
+  }
+
 }
 
 
-/*---------- Desktops ----------*/
+/*---------- Desktops, purple ----------*/
 @media (min-width: 1200px) {
+
   header {
     background-color: #483D8B;
   }
@@ -98,10 +105,15 @@ footer {
 
   #column-3 {
     background-color: #6A5ACD;
+    width: calc(100%/3);
   }
 
   footer {
     background-color: #7B68EE;
+  }
+
+  .col-3 {
+    width: calc(100%/3);
   }
 
 }
